--- a/Python_Basics/Notes.ipynb
+++ b/Python_Basics/Notes.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -92,12 +92,12 @@
     "# Storing the what type() returns in a variable\n",
     "result = type(a)\n",
     "\n",
-    "print(type(a))\n",
-    "print(type(b))\n",
-    "print(result)\n",
+    "print(str(type(a)))\n",
+    "print(str(type(b)))\n",
+    "print(str(result))\n",
     "\n",
     "# Interesting fact: 'type' of a 'type' returns a 'type' :'D\n",
-    "print(type(result))"
+    "print(str(type(result)))"
    ]
   },
   {
