--- a/Python_Basics/0_Notes.ipynb
+++ b/Python_Basics/0_Notes.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numbers, Strings, 'type', 'def', 'try-except-finally'"
+    "### Section 1: Numbers, Strings, 'type', 'def', 'try-except-finally'"
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -254,28 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Attempting to add <class 'int'> and <class 'str'> object\n",
-      "Type of the first parameter is: <class 'int'>\n",
-      "Type of the second parameter is: <class 'str'>\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "ename": "NameError",
+     "evalue": "name 'dry' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [6], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m a \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m      6\u001b[0m b \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mMy Name\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> 7\u001b[0m dry(a, b)\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mProgram will not reach this line\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn [4], line 14\u001b[0m, in \u001b[0;36mdry\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mType of the first parameter is: \u001b[39m\u001b[39m{\u001b[39;00ma_type\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mType of the second parameter is: \u001b[39m\u001b[39m{\u001b[39;00mb_type\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 14\u001b[0m result \u001b[39m=\u001b[39m a \u001b[39m+\u001b[39;49m b\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe type of the result of adding the given two objects is: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(result)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe result of adding is: \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [3], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m a \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m      6\u001b[0m b \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mMy Name\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> 7\u001b[0m dry(a, b)\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mProgram will not reach this line\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dry' is not defined"
      ]
     }
    ],
@@ -293,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -349,6 +339,215 @@
     "dry_better(a, b)\n",
     "\n",
     "print(\"Program will reach this line\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 2: Basic Class Syntax and a Deeper look at Strings, Function arguments, Type Annotation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strings are 'objects' created from the class 'str'. Python classes have attributes, methods, special methods (dunder methods) and many other advanced things we will slowly try to understand.\n",
+    "\n",
+    "Here we will first implement a simple class, so that we can better understand what happens when create 'str' objects and use its methods, attributes and dunder methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employee:\n",
+    "\n",
+    "    # __init__ is our first dunder method (double underscore method)\n",
+    "    # these special methods should never be called explicitly, instead\n",
+    "    # they will be called implicitly by the Python Interpreter\n",
+    "    # all methods(functions) of a class should refer to itself, by the\n",
+    "    # keyword 'self'. \n",
+    "    # We will see later on that there are exceptions to this\n",
+    "    # case due to an advanced concept of staticmethods.\n",
+    "    def __init__(self, name: str, salary: int) -> None:\n",
+    "        self.name = name\n",
+    "        self.salary = salary\n",
+    "\n",
+    "    # Here we are implementing an extra dunder method\n",
+    "    # to show how these methods are supposed to be called\n",
+    "    # by the Python interpreter\n",
+    "    def __len__(self) -> int:\n",
+    "        return len(self.name)\n",
+    "\n",
+    "    # This is a normal class function/method\n",
+    "    # that simply raises an employee objects\n",
+    "    # salary by a given amount\n",
+    "    def give_a_raise(self, amount: int) -> None:\n",
+    "        self.salary = self.salary + amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Employee'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The key idea of a 'class' is to combine data and logic together.\n",
+    "# Another concept is that a 'class' can have as many instances as we want.\n",
+    "\n",
+    "# Here we create two instance/objects of the same class Employee\n",
+    "# Here the python interpreter calls the __init__ method to initialize these classes\n",
+    "employee_1 = Employee(name=\"Your Name\", salary=15000)\n",
+    "employee_2 = Employee(name=\"Good Friend\", salary=20000)\n",
+    "\n",
+    "# We can check the type of employee objects \n",
+    "print(type(employee_1))\n",
+    "\n",
+    "#The output is <class '__main__.Employee'>, but it doesn't show up on github"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your Name has the lowest salary, 15000\n",
+      "Good Friend has higher salary, 20000\n",
+      "9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can access object attribute values using the dot(.) operator\n",
+    "print(f\"{employee_1.name} has the lowest salary, {employee_1.salary}\")\n",
+    "print(f\"{employee_2.name} has higher salary, {employee_2.salary}\")\n",
+    "\n",
+    "# Calling dunder methods explicitly is a bad practice and is prohibited in most cases\n",
+    "print(employee_1.__len__())\n",
+    "\n",
+    "# Instead use this syntax\n",
+    "print(len(employee_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your Name doesn't have the lowest salary anymore: 45000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using class Methods\n",
+    "employee_1.give_a_raise(30000)\n",
+    "\n",
+    "print(f\"{employee_1.name} doesn't have the lowest salary anymore: {employee_1.salary}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__The 'str' class__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 'str' class is special in python, as it is a core data type. Creating an instance of this class is hence completely \n",
+    "handled by the interpreter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_name = \"My Name\"\n",
+    "print(type(my_name))\n",
+    "\n",
+    "# The output is | <class 'str'> |, but it doesn't show up on github"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of my_name is: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calling len function\n",
+    "print(f\"The length of my_name is: {len(my_name)}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name\n",
+      "My Name\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calling some methods of this 'str' object\n",
+    "\n",
+    "# Capitalize only the first letter\n",
+    "print(my_name.capitalize())\n",
+    "\n",
+    "# 'Titlecase' the string object\n",
+    "print(my_name.title())\n",
+    "\n",
+    "# Count the number of occurences of a specific letter\n",
+    "print(my_name.count(\"m\"))"
    ]
   }
  ],
