24th December End

--- a/Python_Basics/0_Basics.ipynb
+++ b/Python_Basics/0_Basics.ipynb
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__The 'str' class__"
+    "__The 'str' class, enumerate and range function__"
    ]
   },
   {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -548,6 +548,248 @@
     "\n",
     "# Count the number of occurences of a specific letter\n",
     "print(my_name.count(\"m\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 0, string_1[0]: T, Value: T\n",
+      "Index: 1, string_1[1]: h, Value: h\n",
+      "Index: 2, string_1[2]: i, Value: i\n",
+      "Index: 3, string_1[3]: s, Value: s\n",
+      "Index: 4, string_1[4]:  , Value:  \n",
+      "Index: 5, string_1[5]: i, Value: i\n",
+      "Index: 6, string_1[6]: s, Value: s\n",
+      "Index: 7, string_1[7]:  , Value:  \n",
+      "Index: 8, string_1[8]: a, Value: a\n",
+      "Index: 9, string_1[9]:  , Value:  \n",
+      "Index: 10, string_1[10]: s, Value: s\n",
+      "Index: 11, string_1[11]: t, Value: t\n",
+      "Index: 12, string_1[12]: r, Value: r\n",
+      "Index: 13, string_1[13]: i, Value: i\n",
+      "Index: 14, string_1[14]: n, Value: n\n",
+      "Index: 15, string_1[15]: g, Value: g\n",
+      "Index: 16, string_1[16]: ., Value: .\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using [] operator to access string object elements\n",
+    "string_1 = \"This is a string.\"\n",
+    "\n",
+    "# Using enumerate function on string lets us iterate\n",
+    "# through it but has the advantange of returning\n",
+    "# both index and value \n",
+    "for index, value in enumerate(string_1):\n",
+    "    print(f\"Index: {index}, string_1[{index}]: {string_1[index]}, Value: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 0, string_1[0]: T\n",
+      "Index: 1, string_1[1]: h\n",
+      "Index: 2, string_1[2]: i\n",
+      "Index: 3, string_1[3]: s\n",
+      "Index: 4, string_1[4]:  \n",
+      "Index: 5, string_1[5]: i\n",
+      "Index: 6, string_1[6]: s\n",
+      "Index: 7, string_1[7]:  \n",
+      "Index: 8, string_1[8]: a\n",
+      "Index: 9, string_1[9]:  \n",
+      "Index: 10, string_1[10]: s\n",
+      "Index: 11, string_1[11]: t\n",
+      "Index: 12, string_1[12]: r\n",
+      "Index: 13, string_1[13]: i\n",
+      "Index: 14, string_1[14]: n\n",
+      "Index: 15, string_1[15]: g\n",
+      "Index: 16, string_1[16]: .\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Another method to get iterate through a string using indices\n",
+    "# is to use range(len(object))\n",
+    "# But this is a bad practice\n",
+    "\n",
+    "for index in range(len(string_1)):\n",
+    "     print(f\"Index: {index}, string_1[{index}]: {string_1[index]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 0, string_1[0]: T, Value: T\n",
+      "Index: 1, string_1[1]: h, Value: h\n",
+      "Index: 2, string_1[2]: i, Value: i\n",
+      "Index: 3, string_1[3]: s, Value: s\n",
+      "Index: 4, string_1[4]:  , Value:  \n",
+      "Index: 5, string_1[5]: i, Value: i\n",
+      "Index: 6, string_1[6]: s, Value: s\n",
+      "Index: 7, string_1[7]:  , Value:  \n",
+      "Index: 8, string_1[8]: a, Value: a\n",
+      "Index: 9, string_1[9]: n, Value: n\n",
+      "Index: 10, string_1[10]:  , Value:  \n",
+      "Index: 11, string_1[11]: i, Value: i\n",
+      "Index: 12, string_1[12]: m, Value: m\n",
+      "Index: 13, string_1[13]: m, Value: m\n",
+      "Index: 14, string_1[14]: u, Value: u\n",
+      "Index: 15, string_1[15]: t, Value: t\n",
+      "Index: 16, string_1[16]: a, Value: a\n",
+      "Index: 17, string_1[17]: b, Value: b\n",
+      "Index: 18, string_1[18]: l, Value: l\n",
+      "Index: 19, string_1[19]: e, Value: e\n",
+      "Index: 20, string_1[20]:  , Value:  \n",
+      "Index: 21, string_1[21]: s, Value: s\n",
+      "Index: 22, string_1[22]: t, Value: t\n",
+      "Index: 23, string_1[23]: r, Value: r\n",
+      "Index: 24, string_1[24]: i, Value: i\n",
+      "Index: 25, string_1[25]: n, Value: n\n",
+      "Index: 26, string_1[26]: g, Value: g\n",
+      "Index: 27, string_1[27]:  , Value:  \n",
+      "Index: 28, string_1[28]: o, Value: o\n",
+      "Index: 29, string_1[29]: b, Value: b\n",
+      "Index: 30, string_1[30]: j, Value: j\n",
+      "Index: 31, string_1[31]: e, Value: e\n",
+      "Index: 32, string_1[32]: c, Value: c\n",
+      "Index: 33, string_1[33]: t, Value: t\n",
+      "Index: 34, string_1[34]: ., Value: .\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [12], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIndex: \u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m, string_1[\u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m]: \u001b[39m\u001b[39m{\u001b[39;00mstring_2[index]\u001b[39m}\u001b[39;00m\u001b[39m, Value: \u001b[39m\u001b[39m{\u001b[39;00mvalue\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[39m# This will raise an error\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m string_2[\u001b[39m2\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mz\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# 'str' objects are immutable, i.e., we cannot modify a string instance after creating it\n",
+    "string_2 = \"This is an immutable string object.\"\n",
+    "\n",
+    "for index, value in enumerate(string_2):\n",
+    "    print(f\"Index: {index}, string_1[{index}]: {string_2[index]}, Value: {value}\")\n",
+    "\n",
+    "# This will raise an error\n",
+    "string_2[2] = \"z\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the string_2 is: 35\n",
+      "The mid index of string_2 is: 17\n",
+      "This is an immuta\n",
+      "This is an immuta\n",
+      "immutable\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using [] slices to get substrings and another look at zero-based index of python\n",
+    "mid_index = len(string_2) // 2\n",
+    "\n",
+    "print(f\"Length of the string_2 is: {len(string_2)}\")\n",
+    "print(f\"The mid index of string_2 is: {mid_index}\")\n",
+    "print(f\"{string_2[:mid_index]}\")\n",
+    "\n",
+    "# The follwing also returns the same output\n",
+    "# If not specified the slice will start at 0 by default\n",
+    "print(f\"{string_2[0:mid_index]}\")\n",
+    "\n",
+    "# Getting the substring starting at index 'a' and ending at index 'b-1'\n",
+    "# Looking at the output of the previous cell\n",
+    "# the substring 'immutable' should be in the indices 11-19\n",
+    "# but the slice operation requires us to end at 20 to get the 19th index value\n",
+    "print(f\"{string_2[11:20]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ti sa mual tigojc.\n",
+      "Ti sa mual tigojc.\n",
+      ".tcejbo gnirts elbatummi na si sihT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The syntax for slicing and skipping 'n' elements is Object[a:b:n]\n",
+    "# This will return the values starting from index 'a'\n",
+    "# ending at 'b-1' and will skip 'n' values  \n",
+    "print(f\"{string_2[0:len(string_2):2]}\")\n",
+    "\n",
+    "# The following syntax is called 'striding'\n",
+    "print(f\"{string_2[::2]}\")\n",
+    "\n",
+    "# A shortcut method of creating reverse strings using stride syntax\n",
+    "print(f\"{string_2[::-1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integer: 0, Squared Value: 0\n",
+      "Integer: 1, Squared Value: 1\n",
+      "Integer: 2, Squared Value: 4\n",
+      "Integer: 3, Squared Value: 9\n",
+      "Integer: 4, Squared Value: 16\n",
+      "Integer: 5, Squared Value: 25\n",
+      "Integer: 6, Squared Value: 36\n",
+      "Integer: 7, Squared Value: 49\n",
+      "Integer: 8, Squared Value: 64\n",
+      "Integer: 9, Squared Value: 81\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting a better understanding of the range function\n",
+    "# range function creates a 'generator', which is an advanced topic we will cover later on.\n",
+    "# range allows us to generate integer values very easily\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print(f\"Integer: {i}, Squared Value: {i**2}\")"
    ]
   }
  ],
