--- a/Python_Basics/2_Exercise_1.ipynb
+++ b/Python_Basics/2_Exercise_1.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "# Checking if a sentence forms a pangram \n",
+    "# Checking if a sentence forms a pangram (Contains all letters from A-Z)\n",
     "\n",
     "# string is a standard library\n",
     "import string\n",
@@ -68,13 +68,6 @@
     "print(f\"sentence_1 is a pangram: {sentence_1_check}\")\n",
     "print(f\"sentence_2 is a pangram: {sentence_2_check}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
