--- a/Python_Basics/0_Basics.ipynb
+++ b/Python_Basics/0_Basics.ipynb
@@ -65,8 +65,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A class is like a blueprint. Anything created from a class is called an Object. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +150,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [2], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(a))\n\u001b[0;32m     31\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(b))\n\u001b[1;32m---> 32\u001b[0m result \u001b[39m=\u001b[39m a \u001b[39m+\u001b[39;49m b\n",
+      "Cell \u001b[1;32mIn [3], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(a))\n\u001b[0;32m     31\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(b))\n\u001b[1;32m---> 32\u001b[0m result \u001b[39m=\u001b[39m a \u001b[39m+\u001b[39;49m b\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
@@ -206,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,6 +233,10 @@
     "# times, that is, we repeated ourselves. This is not a\n",
     "# good practice. Instead we can just write a reusable function in this case.\n",
     "\n",
+    "# def function_name(parameter_name_1: parameter_type(input)) -> return_value: parameter_type(output):\n",
+    "    # Statements\n",
+    "\n",
+    "# Type Annotation is completely optional in Python\n",
     "def dry(a: int | float | str, b: int | float | str) -> int | float | str:\n",
     "    a_type = type(a)\n",
     "    b_type = type(b)\n",
@@ -226,12 +247,14 @@
     "    result = a + b\n",
     "\n",
     "    print(f\"The type of the result of adding the given two objects is: {type(result)}\")\n",
-    "    print(f\"The result of adding is: {result}\")\n"
+    "    print(f\"The result of adding is: {result}\")\n",
+    "\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -244,6 +267,16 @@
       "The type of the result of adding the given two objects is: <class 'float'>\n",
       "The result of adding is: 20.21\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20.21"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -254,18 +287,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dry' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting to add <class 'int'> and <class 'str'> object\n",
+      "Type of the first parameter is: <class 'int'>\n",
+      "Type of the second parameter is: <class 'str'>\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m a \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m      6\u001b[0m b \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mMy Name\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> 7\u001b[0m dry(a, b)\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mProgram will not reach this line\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dry' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [6], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m a \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m      6\u001b[0m b \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mMy Name\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> 7\u001b[0m dry(a, b)\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mProgram will not reach this line\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn [4], line 18\u001b[0m, in \u001b[0;36mdry\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mType of the first parameter is: \u001b[39m\u001b[39m{\u001b[39;00ma_type\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mType of the second parameter is: \u001b[39m\u001b[39m{\u001b[39;00mb_type\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 18\u001b[0m result \u001b[39m=\u001b[39m a \u001b[39m+\u001b[39;49m b\n\u001b[0;32m     20\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe type of the result of adding the given two objects is: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(result)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe result of adding is: \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
    ],
@@ -283,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,6 +334,14 @@
     "# if an error occurs\n",
     "\n",
     "def dry_better(a: int | float | str, b: int | float | str) -> int | float | str:\n",
+    "    \"\"\"\n",
+    "    Runs several print statements, returns the result of adding 'a' and 'b'\n",
+    "\n",
+    "    param: a - int | float | str \n",
+    "    param: b - int | float | str\n",
+    "\n",
+    "    returns: int| float | str\n",
+    "    \"\"\"\n",
     "    # Put the whole code inside a 'try' block\n",
     "    # this will try to run the code\n",
     "    # but if an exception or error occurs it will move onto\n",
@@ -318,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -329,6 +380,13 @@
       "Type of the first parameter is: <class 'int'>\n",
       "Type of the second parameter is: <class 'str'>\n",
       "You cannot add <class 'int'> and <class 'str'>\n",
+      "Attempting to add <class 'int'> and <class 'float'> object\n",
+      "Type of the first parameter is: <class 'int'>\n",
+      "Type of the second parameter is: <class 'float'>\n",
+      "The type of the result of adding the given two objects is: <class 'float'>\n",
+      "The result of adding is: 20.2\n",
+      "You cannot add <class 'int'> and <class 'float'>\n",
+      "None\n",
       "Program will reach this line\n"
      ]
     }
@@ -337,6 +395,10 @@
     "a = 2\n",
     "b = \"My Name\"\n",
     "dry_better(a, b)\n",
+    "\n",
+    "return_value = dry_better(a=10,b=10.2)\n",
+    "\n",
+    "print(return_value)\n",
     "\n",
     "print(\"Program will reach this line\")"
    ]
@@ -361,12 +423,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Employee:\n",
-    "\n",
     "    # __init__ is our first dunder method (double underscore method)\n",
     "    # these special methods should never be called explicitly, instead\n",
     "    # they will be called implicitly by the Python Interpreter\n",
@@ -384,6 +445,13 @@
     "    def __len__(self) -> int:\n",
     "        return len(self.name)\n",
     "\n",
+    "    def __add__(self, other: Employee):\n",
+    "        self.salary = self.salary + other.salary\n",
+    "        return self\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Employee name is: {self.name}\"\n",
+    "        \n",
     "    # This is a normal class function/method\n",
     "    # that simply raises an employee objects\n",
     "    # salary by a given amount\n",
@@ -393,14 +461,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Employee'>\n"
+      "<class '__main__.Employee'>\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n"
      ]
     }
    ],
@@ -410,58 +480,104 @@
     "\n",
     "# Here we create two instance/objects of the same class Employee\n",
     "# Here the python interpreter calls the __init__ method to initialize these classes\n",
-    "employee_1 = Employee(name=\"Your Name\", salary=15000)\n",
-    "employee_2 = Employee(name=\"Good Friend\", salary=20000)\n",
+    "employee_1 = Employee(name=\"Shaymoly\", salary=15000)\n",
+    "employee_2 = Employee(name=\"Tushar\", salary=20000)\n",
+    "integer_1 = 10\n",
+    "float_1 = 10.2\n",
     "\n",
-    "# We can check the type of employee objects \n",
+    "# We can check the type of employee objects\n",
+    "\n",
     "print(type(employee_1))\n",
-    "\n",
+    "print(type(integer_1))\n",
+    "print(type(float_1))\n",
     "#The output is <class '__main__.Employee'>, but it doesn't show up on github"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your Name has the lowest salary, 15000\n",
-      "Good Friend has higher salary, 20000\n",
-      "9\n",
-      "9\n"
+      "Shaymoly has the lowest salary, 15000\n",
+      "Tushar has higher salary, 20000\n",
+      "8\n",
+      "Mahmudul\n",
+      "8\n",
+      "8\n"
      ]
     }
    ],
    "source": [
     "# We can access object attribute values using the dot(.) operator\n",
+    "\n",
     "print(f\"{employee_1.name} has the lowest salary, {employee_1.salary}\")\n",
     "print(f\"{employee_2.name} has higher salary, {employee_2.salary}\")\n",
     "\n",
-    "# Calling dunder methods explicitly is a bad practice and is prohibited in most cases\n",
+    "# Calling dunder methods explicitly/directly is a bad practice and is prohibited in most cases\n",
+    "# Calling functions\n",
     "print(employee_1.__len__())\n",
     "\n",
     "# Instead use this syntax\n",
+    "string_1 = \"Mahmudul\"\n",
+    "print(string_1)\n",
+    "print(len(string_1))\n",
     "print(len(employee_1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your Name doesn't have the lowest salary anymore: 45000\n"
+      "Employee name is: Shaymoly\n"
      ]
     }
    ],
    "source": [
-    "# Using class Methods\n",
+    "print(employee_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35000\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = employee_1 + employee_2\n",
+    "print(employee_1.salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shaymoly doesn't have the lowest salary anymore: 65000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using regular class methods/functions\n",
     "employee_1.give_a_raise(30000)\n",
     "\n",
     "print(f\"{employee_1.name} doesn't have the lowest salary anymore: {employee_1.salary}\")"
@@ -486,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +614,7 @@
     }
    ],
    "source": [
-    "my_name = \"My Name\"\n",
+    "my_name = \"mahmudul hasan\"\n",
     "print(type(my_name))\n",
     "\n",
     "# The output is | <class 'str'> |, but it doesn't show up on github"
@@ -506,14 +622,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The length of my_name is: 7\n"
+      "The length of my_name is: 14\n"
      ]
     }
    ],
@@ -524,21 +640,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My name\n",
-      "My Name\n",
-      "1\n"
+      "mahmudul hasan\n",
+      "Mahmudul hasan\n",
+      "Mahmudul Hasan\n",
+      "2\n"
      ]
     }
    ],
    "source": [
     "# Calling some methods of this 'str' object\n",
+    "\n",
+    "print(my_name)\n",
     "\n",
     "# Capitalize only the first letter\n",
     "print(my_name.capitalize())\n",
@@ -547,12 +666,72 @@
     "print(my_name.title())\n",
     "\n",
     "# Count the number of occurences of a specific letter\n",
-    "print(my_name.count(\"m\"))"
+    "print(my_name.count(\"m\"))\n",
+    "\n",
+    "# Docs : https://docs.python.org/3/library/string.html\n",
+    "# Try to use all string methods in a code "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "\n",
+    "for letter in my_name:\n",
+    "    if letter == \"m\":\n",
+    "        count = count + 1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m\n",
+      "a\n",
+      "h\n",
+      "m\n",
+      "u\n",
+      "d\n",
+      "u\n",
+      "l\n",
+      " \n",
+      "h\n",
+      "a\n",
+      "s\n",
+      "a\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the fact that 'str' is derived from the abstract base class 'sequence'\n",
+    "# we can iterate through it using for as below\n",
+    "\n",
+    "for letter in my_name:\n",
+    "    print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +860,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [12], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIndex: \u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m, string_1[\u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m]: \u001b[39m\u001b[39m{\u001b[39;00mstring_2[index]\u001b[39m}\u001b[39;00m\u001b[39m, Value: \u001b[39m\u001b[39m{\u001b[39;00mvalue\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[39m# This will raise an error\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m string_2[\u001b[39m2\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mz\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "Cell \u001b[1;32mIn [49], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIndex: \u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m, string_1[\u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m]: \u001b[39m\u001b[39m{\u001b[39;00mstring_2[index]\u001b[39m}\u001b[39;00m\u001b[39m, Value: \u001b[39m\u001b[39m{\u001b[39;00mvalue\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[39m# This will raise an error\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m string_2[\u001b[39m2\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mz\u001b[39m\u001b[39m\"\u001b[39m\n",
       "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
