--- a/Python_Basics/Exercise/Exercise_3.ipynb
+++ b/Python_Basics/Exercise/Exercise_3.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fibonacci Series"
+    "# Fibonacci Series\n",
+    "\n",
+    "Ref : https://www.geeksforgeeks.org/python-program-for-program-for-fibonacci-numbers-2/"
    ]
   },
   {
@@ -109,13 +111,6 @@
     "for i in range(0, 11):\n",
     "    print(Fibonacci_Iterative(i))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -134,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
