Benchmark Ratio of Performance

--- a/Python_Basics/Theory/2_AdvancedListString.ipynb
+++ b/Python_Basics/Theory/2_AdvancedListString.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "['This', 'is', 'a', 'string']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +105,12 @@
     "# Please don't think that this means that Python is a 'bad' or 'slow' language, instead what we will actually\n",
     "# learn from this is how seamlessly we can can make Python flexible or performant as necessary.\n",
     "# \n",
-    "# The example we will look at here is very basic, we will add 100000 numbers starting from 1 and ending at 100000"
+    "# The example we will look at here is very basic, we will add 1000000 numbers starting from 1 and ending at 1000000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,18 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The for loop method runtime: 1172847300 nanosec\n"
+      "The for loop method runtime: 1192794800 nanosec\n"
      ]
     }
    ],
    "source": [
+    "# Using a python for loop\n",
+    "\n",
     "start = time.perf_counter_ns()\n",
     "\n",
     "s = 0\n",
@@ -159,18 +161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum method runtime: 306067100 nanosec\n"
+      "The sum method runtime: 316956100 nanosec\n"
      ]
     }
    ],
    "source": [
+    "# Using built-in sum function provided by python\n",
+    "\n",
     "start = time.perf_counter_ns()\n",
     "\n",
     "sum(l)\n",
@@ -184,18 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The np.sum method runtime: 6236000 nanosec\n"
+      "The np.sum method runtime: 6113900 nanosec\n"
      ]
     }
    ],
    "source": [
+    "# Using the sum function and ndarray object provided by the numpy library\n",
+    "\n",
     "start = time.perf_counter_ns()\n",
     "\n",
     "np.sum(nparray)\n",
@@ -209,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -217,13 +223,86 @@
      "output_type": "stream",
      "text": [
       "The ratio of the benchmarks is: \n",
-      "npsum : sum : for = 1 : 49.08 : 188.08\n"
+      "npsum : sum : for = 1 : 51.84 : 195.10\n"
      ]
     }
    ],
    "source": [
     "print(\"The ratio of the benchmarks is: \")\n",
     "print(f\"npsum : sum : for = {1} : {(sum_method/npsum_method):.2f} : {(for_method/npsum_method):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boosting the performance of numpy\n",
+    "# by using numba 'decorators'. A decorator\n",
+    "# is an advanced concept, it is a function that\n",
+    "# takes in a function and processes it. \n",
+    "# We call decorators using the '@' operator and\n",
+    "# write the decorator function name above a function\n",
+    "# we want to decorate.\n",
+    "\n",
+    "import numba as nb\n",
+    "\n",
+    "@nb.njit()\n",
+    "def nb_np_sum(a: np.ndarray) -> int:\n",
+    "    return np.sum(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The np.sum method runtime: 2390600 nanosec\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the sum function and ndarray object provided by the numpy library\n",
+    "# and boosting its performance further by using numba\n",
+    "\n",
+    "# We have to run a numba decorated function once before using it\n",
+    "# as numba needs to compile the function during the first iteration\n",
+    "# and thus when we use a numba function for the first time, it might\n",
+    "# perform worse than others\n",
+    "\n",
+    "start = time.perf_counter_ns()\n",
+    "\n",
+    "nb_np_sum(nparray)\n",
+    "\n",
+    "end = time.perf_counter_ns()\n",
+    "\n",
+    "print(f\"The np.sum method runtime: {end - start} nanosec\")\n",
+    "\n",
+    "np_nb_sum_method = end - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ratio of the benchmarks is: \n",
+      "np_nb_sum : npsum : sum : for = 1 : 2.56 : 132.58 : 498.95\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The ratio of the benchmarks is: \")\n",
+    "print(f\"np_nb_sum : npsum : sum : for = {1} : {(npsum_method/np_nb_sum_method):.2f} : {(sum_method/np_nb_sum_method):.2f} : {(for_method/np_nb_sum_method):.2f}\")"
    ]
   },
   {
