--- a/Python_Basics/Theory/2_AdvancedListString.ipynb
+++ b/Python_Basics/Theory/2_AdvancedListString.ipynb
@@ -306,6 +306,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the core list data type combined with a python loop is on average 500 times slower than numpy and numba combined, even when running basic numerical computations. This performance loss may become more significant when working on more complex numerical computations."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This doesn't mean that the list data structure provided by python is useless. It is actually really useful for analyzing and preprocessing large scale datasets. Especially datasets that contain strings, and mixed data types.\n",
+    "\n",
+    "Also, for a specialized branch of AI, Natural Language Processing(NLP), we will often have to work with a combination of list, string and dictionary objects. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -329,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
