29th December Update

--- a/Experiments/Spacy/Chapter 1.ipynb
+++ b/Experiments/Spacy/Chapter 1.ipynb
@@ -9,6 +9,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "conda install spacy --channel conda-forge\n",
+    "python -m spacy download en_core_web_sm "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +74,7 @@
        "7"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,6 +108,55 @@
     "print(tree_kangaroos_and_narwhals.text)\n",
     "\n",
     "len(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string_object = \"I love Bangladesh.\"\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "doc = nlp(string_object)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Doc object, processes a string object and runs several analytical components on it and attaches various metadata on the various parts of the string object by tokenizing it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I            | PRON        \n",
+      "love         | VERB        \n",
+      "Bangladesh   | PROPN       \n",
+      ".            | PUNCT       \n",
+      "\n",
+      "Bangladesh   | GPE         \n"
+     ]
+    }
+   ],
+   "source": [
+    "# GPE = Geopolitical Entity\n",
+    "\n",
+    "for token in doc:\n",
+    "    print(f\"{token.text:<12} | {token.pos_:<12}\")\n",
+    "\n",
+    "for ent in doc.ents:\n",
+    "    print(f\"\\n{ent.text:<12} | {ent.label_:<12}\")\n"
    ]
   },
   {
@@ -177,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -236,17 +294,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "It           | PRON        \n",
+      "’s           | VERB        \n",
+      "official     | ADJ         \n",
+      ":            | PUNCT       \n",
+      "Apple        | PROPN       \n",
+      "is           | AUX         \n",
+      "the          | DET         \n",
+      "first        | ADJ         \n",
+      "U.S.         | PROPN       \n",
+      "public       | ADJ         \n",
+      "company      | NOUN        \n",
+      "to           | PART        \n",
+      "reach        | VERB        \n",
+      "a            | DET         \n",
+      "1            | NUM         \n",
+      "trillion     | NUM         \n",
+      "market       | NOUN        \n",
+      "value        | NOUN        \n",
       "Apple ORG\n",
       "first ORDINAL\n",
       "U.S. GPE\n",
-      "$1 trillion MONEY\n"
+      "1 trillion CARDINAL\n",
+      "I            | PRON        \n",
+      "Love         | VERB        \n",
+      "Apple        | PROPN       \n"
      ]
     }
    ],
@@ -256,13 +335,26 @@
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
-    "text = \"It’s official: Apple is the first U.S. public company to reach a $1 trillion market value\"\n",
+    "text_1 = \"It’s official: Apple is the first U.S. public company to reach a 1 trillion market value\"\n",
+    "\n",
+    "text_2 = \"I Love Apple\"\n",
     "\n",
     "# Process the text\n",
-    "doc = nlp(text)\n",
+    "doc_1 = nlp(text_1)\n",
+    "doc_2 = nlp(text_2)\n",
     "\n",
     "# Iterate over the predicted entities\n",
-    "for ent in doc.ents:\n",
+    "for token in doc_1:\n",
+    "    print(f\"{token.text:<12} | {token.pos_:<12}\")\n",
+    "\n",
+    "for ent in doc_1.ents:\n",
+    "    # Print the entity text and its label\n",
+    "    print(ent.text, ent.label_)\n",
+    "\n",
+    "for token in doc_2:\n",
+    "    print(f\"{token.text:<12} | {token.pos_:<12}\")\n",
+    "\n",
+    "for ent in doc_2.ents:\n",
     "    # Print the entity text and its label\n",
     "    print(ent.text, ent.label_)"
    ]
