--- a/Python_Basics/Theory/2_AdvancedListString.ipynb
+++ b/Python_Basics/Theory/2_AdvancedListString.ipynb
@@ -333,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep",
+   "display_name": "nlp",
    "language": "python",
    "name": "python3"
   },
@@ -347,12 +347,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:33) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "750b0b0bcdd9fe2e206a310bba2895779907b3630475ba10ada1c3aa2da185e2"
+    "hash": "1ebb7e558e7ed008a3dcfdee2b5ca375dec2770e0bacf690df687f28ca14f162"
    }
   }
  },
